// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mops build error 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build foo

build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`mops build error 2`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build bar

build canister bar",
}
`;

exports[`mops build error 3`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build foo bar

build canister foo
build canister bar",
}
`;

exports[`mops build success 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build

build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`mops build success 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build foo

build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build bar

build canister bar

✓ Built 1 canister successfully",
}
`;

exports[`mops build success 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli build foo bar

build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`mops check-candid 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid a.did a.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid b.did b.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid c.did c.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid a.did b.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 5`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid b.did a.did

✓ Candid compatibility check passed",
}
`;

exports[`mops check-candid 6`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid a.did c.did
",
}
`;

exports[`mops check-candid 7`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid c.did a.did
",
}
`;

exports[`mops check-candid 8`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid b.did c.did
",
}
`;

exports[`mops check-candid 9`] = `
{
  "exitCode": 1,
  "stderr": "✖ Candid compatibility check failed",
  "stdout": "
> ic-mops@1.12.0 mops
> tsx ./environments/nodejs/cli check-candid c.did b.did
",
}
`;
